# rd_api_py

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  rdapi.py  setup.py  test.py
examples/: bbb.torrent  examples.py
src/: rdapi.py
src/rdapi/: __init__.py  rdapi.py
